# cmd/ambulance-api-service/main.go
@@ -8,6 +8,12 @@ import (
 	"github.com/Marek-FIIT/ambulance-webapi/api"
 	"github.com/Marek-FIIT/ambulance-webapi/internal/ambulance_wl"
 	"github.com/gin-gonic/gin"
+
+	"context"
+	"time"
+
+	"github.com/Marek-FIIT/ambulance-webapi/internal/db_service"
+	"github.com/gin-contrib/cors"
 )
 
 func main() {
@@ -22,6 +28,24 @@ func main() {
 	}
 	engine := gin.New()
 	engine.Use(gin.Recovery())
+
+	corsMiddleware := cors.New(cors.Config{
+		AllowOrigins:     []string{"*"},
+		AllowMethods:     []string{"GET", "PUT", "POST", "DELETE", "PATCH"},
+		AllowHeaders:     []string{"Origin", "Authorization", "Content-Type"},
+		ExposeHeaders:    []string{""},
+		AllowCredentials: false,
+		MaxAge:           12 * time.Hour,
+	})
+	engine.Use(corsMiddleware)
+
+	// setup context update  middleware
+	dbService := db_service.NewMongoService[ambulance_wl.Ambulance](db_service.MongoServiceConfig{})
+	defer dbService.Disconnect(context.Background())
+	engine.Use(func(ctx *gin.Context) {
+		ctx.Set("db_service", dbService)
+		ctx.Next()
+	})
 
 	// request routings
 	ambulance_wl.AddRoutes(engine)
